# Pr-ctica-3---ALSE2025-2-G2

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
html/: _biblioteca_8h.html  _biblioteca_8h.js  _biblioteca_8h_source.html  _libro_8h.html  _libro_8h.js  _libro_8h_source.html  annotated.html  annotated_dup.js  biblioteca_8cpp.html  class_biblioteca-members.html  class_biblioteca.html  class_biblioteca.js  class_libro-members.html  class_libro.html  class_libro.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  libro_8cpp.html  main_8cpp.html  main_8cpp.js  navtreedata.js  navtreeindex0.js
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  files_0.js  files_1.js  functions_1.js  functions_4.js  functions_5.js  searchdata.js
include/: Biblioteca.h  Libro.h
latex/: _biblioteca_8h.tex  _biblioteca_8h_source.tex  _libro_8h.tex  _libro_8h_source.tex  annotated.tex  biblioteca_8cpp.tex  class_biblioteca.tex  class_libro.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  libro_8cpp.tex  main_8cpp.tex  refman.tex
src/: biblioteca.cpp  libro.cpp  main.cpp
